VRDisplay should not prevent entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=203105

Reviewed by Chris Dumez.

VRDisplay schedules asynchronous execution of events using the WindowEventLoop instead of
synchronously firing them. WindowEventLoop does correctly suspend while in cache.

Apart from that suspend()/resume() were implemented by forcing m_scriptedAnimationController
to suspend the VR request animation frame machinery while in cache.

Last but not least, stopPresenting() is now also called on suspension.

No new tests were added as there is no testing machinery for WebVR so far. It's unclear how
this unreleased feature will evolve as it's being replaced by WebXR.

* Modules/webvr/VRDisplay.cpp:
(WebCore::VRDisplay::dispatchVRDisplayEventInWindowEventLoop):
(WebCore::VRDisplay::platformDisplayConnected): Use dispatchVRDisplayEventInWindowEventLoop.
(WebCore::VRDisplay::platformDisplayDisconnected): Ditto.
(WebCore::VRDisplay::platformDisplayMounted): Ditto.
(WebCore::VRDisplay::platformDisplayUnmounted): Ditto.
(WebCore::VRDisplay::suspend): Added.
(WebCore::VRDisplay::resume): Added.
(WebCore::VRDisplay::stop): Call stopPresenting().
(WebCore::VRDisplay::shouldPreventEnteringBackForwardCache_DEPRECATED const): Deleted.
* Modules/webvr/VRDisplay.h:

Canonical link: https://commits.webkit.org/217282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252178 268f45cc-cd09-0410-ab3c-d52691b4dbfc